--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@
 
 # macOS directory specific files
 .DS_Store
+
+# CMake files
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
